# Nexus

./: .env.dev.example  .env.example  .gitignore  CLAUDE.md  NEXUS_ROADMAP.md  README.md  deploy-dev.sh  deploy.sh  docker-compose.coturn.dev.yml  docker-compose.coturn.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  setup-runner.sh  start.sh  traefik-config.yml
.github/workflows/: android-release.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  dev.yml  integration-tests.yml  playwright-ui-tests.yml  release.yml  smoke-tests.yml  unit-tests.yml
asc/00_intent_extraction/: 00_phase_overview.md  01_problem_statement.md  02_assumption_registry.md  03_stakeholder_map.md  (+2 more)
client/: Dockerfile  Dockerfile.dev  capacitor.config.ts  nginx.conf  nginx.dev.conf  package-lock.json  package.json
client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs
docs/: CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CROSS_PLATFORM_PLAN.md  DATA_PERSISTENCE.md  FEATURES.md  IMPLEMENTATION.md  PRODUCTION_HARDENING.md  STUN_TURN.md  THEMES.md  ios-signing-setup.md
scripts/: com.github.actions-runner.nexus.plist  setup-mac-runner.sh
server/: .env.example  Dockerfile  automod.js  config.js  db.js  default-sounds.js  docker-entrypoint.sh  helpers.js  index.js  logger.js  metrics.js  package-lock.json  package.json  state.js  test-security.js  utils.js  validation.js
tests/: README.md  babel.config.js  jest.config.js
(+280 files in other folders)
