[package]
name = "nexus"
version = "0.1.0"
description = "A modern chat and voice communication platform"
authors = ["Nexus Team"]
license = "AGPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=2.0.2", features = ["v2_38"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSRunningApplication"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
